--- a/package.json
+++ b/package.json
@@ -6,6 +6,20 @@
   "repository": "https://github.com/switch-coder/wallet-server",
   "license": "MIT",
   "dependencies": {
-    "graphql-yoga": "^1.18.3"
+    "apollo-server": "^2.18.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "bcrypt": "^5.0.0",
+    "crypto-js": "^4.0.0",
+    "csprng": "^0.1.2",
+    "graphql": "^15.3.0"
+  },
+  "scripts": {
+    "start": "nodemon --exec babel-node src/index.js"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.5",
+    "nodemon": "^2.0.4"
   }
 }
