--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "graphql": "^15.3.0"
   },
   "scripts": {
-    "start": "node --exec babel-node src/index.js"
+    "start": "nodemon --exec babel-node src/index.js"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
