--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "wallet server",
   "main": "index.js",
-  "type": "module",
   "repository": "https://github.com/switch-coder/wallet-server",
   "license": "MIT",
   "dependencies": {
@@ -16,7 +15,7 @@
   },
   "scripts": {
     "start": "node src/index.js",
-    "start:dev": "nodemon --exec babel-node -experimental-modules src/index.js"
+    "start:dev": "nodemon --exec babel-node src/index.js"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
