--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "wallet server",
   "main": "index.js",
-  "type": "module",
   "repository": "https://github.com/switch-coder/wallet-server",
   "license": "MIT",
   "dependencies": {
@@ -15,7 +14,8 @@
     "graphql": "^15.3.0"
   },
   "scripts": {
-    "start": "node src/index.js",
+    "heroku-postbuild": "cd wallet-server && yarn install && yarn build",
+    "start": "nodemon --exec babel-node src/index.js",
     "start:dev": "nodemon --exec babel-node src/index.js"
   },
   "devDependencies": {
@@ -23,5 +23,9 @@
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.5",
     "nodemon": "^2.0.4"
+  },
+  "engines": {
+    "npm": "6.14.6",
+    "node": "12.18.3"
   }
 }
