--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "graphql": "^15.3.0"
   },
   "scripts": {
-    "heroku-postbuild": "yarn install && yarn build",
     "start": "nodemon --exec babel-node src/index.js",
     "start:dev": "nodemon --exec babel-node src/index.js"
   },
@@ -26,6 +25,7 @@
   },
   "engines": {
     "npm": "6.14.6",
+    "yarn": "1.22.5",
     "node": "12.18.3"
   }
 }
