--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "repository": "https://github.com/switch-coder/wallet-server",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "apollo-server": "^2.18.1",
     "babel-core": "^7.0.0-bridge.0",
@@ -14,7 +15,7 @@
     "graphql": "^15.3.0"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.js",
+    "start": "node src/index.js",
     "start:dev": "nodemon --exec babel-node src/index.js"
   },
   "devDependencies": {
