--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "graphql": "^15.3.0"
   },
   "scripts": {
-    "start": "node src/index.js",
+    "start": "nodemon --exec babel-node src/index.js",
     "start:dev": "nodemon --exec babel-node src/index.js"
   },
   "devDependencies": {
