--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+yarn.lock*
 .node_modules
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
