--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "braces": "^3.0.2",
     "crypto-js": "^4.0.0",
     "csprng": "^0.1.2",
-    "graphql": "^15.3.0"
+    "graphql": "^15.3.0",
+    "mongoose": "^5.10.9"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
